--- a/src/styles/AdminSettings.css
+++ b/src/styles/AdminSettings.css
@@ -14,9 +14,9 @@
     flex-direction: column;
     transform: translate(50%,50%);
     height: fit-content;
-    margin-left: -140px;
+    margin-left: -120px;
     top: 50px;
     color: #00004d;
     font-weight: 50;
-    font-size: 35px;
+    font-size: 30px;
 }
