--- a/src/styles/AppVersion.css
+++ b/src/styles/AppVersion.css
@@ -14,7 +14,7 @@
     flex-direction: column;
     transform: translate(50%,50%);
     height: fit-content;
-    margin-left: -225px;
+    margin-left: -270px;
     top: 150px;
     color: #00004d;
     font-weight: 50;
