--- a/src/styles/AttendanceReport.css
+++ b/src/styles/AttendanceReport.css
@@ -11,8 +11,7 @@
 .AttendanceReport h2{
     text-align: center;
     padding-top: 100px;
-    
-
+    color: #00004d;
 }
 
 .AttendanceReport Table{
