--- a/src/styles/NavBar.css
+++ b/src/styles/NavBar.css
@@ -131,7 +131,7 @@
     display: flex;
     flex-direction: column;
     width: 85%;
-    height: 1200%;
+    height: 1000%;
     top: 80px;
     position: absolute;
 }
@@ -177,7 +177,7 @@
     margin-top: 5px;
     width: 60px;
     position: absolute;
-    left: 30px;
+    left: 10px;
  }
 
 .Nav-logo p{
@@ -186,7 +186,7 @@
     color: #495867;
     width: 700px;
     position: absolute;
-    left: 380px;
+    left: 350px;
     top: 38px;
     margin-left: 80px;
     transform: translate(-50%,-50%);  
